# agent-ready-booking-flow-qa

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  pyproject.toml  setup.cfg
apps/api/alembic/versions/: 20260619_0001_initial_booking_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  booking.py
apps/api/app/schemas/: __init__.py  booking.py
apps/api/app/seed/: data.py  load.py
apps/api/app/services/: booking.py
apps/api/tests/: conftest.py  test_booking_api.py
apps/web/: index.html  package.json  tailwind.config.ts
apps/web/public/: agent-manifest.json
apps/web/src/: main.tsx
apps/web/src/app/: App.tsx  AppShell.tsx  providers.tsx
apps/web/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  radio-group.tsx
apps/web/src/features/agent-context/: AgentContextPanel.tsx
apps/web/src/features/booking/: booking-store.ts  constants.ts  schemas.ts  types.ts
apps/web/src/lib/: api.ts
apps/web/src/routes/: BookingFlowRoute.tsx
apps/web/src/styles/: index.css
docs/: accessibility-audit.md  agent-ready-requirements.md  api-contract.md  eval-plan.md  eval-report.md  project-brief.md  testing-strategy.md
e2e/: accessibility.spec.ts  booking-flow.spec.ts  eval-report.spec.ts
e2e/helpers/: eval-report.ts
(+7 files in other folders)
